[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/components/thumbnail_styling_categories.tres" type="Resource" id=1]
[ext_resource path="res://ui/components/toolbox.gd" type="Script" id=2]
[ext_resource path="res://ui/components/column_flow.tscn" type="PackedScene" id=3]

[node name="Toolbox" type="VBoxContainer"]
margin_right = 200.0
margin_bottom = 477.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "RESOURCES"
valign = 2

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 477.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
drag_to_rearrange_enabled = true

[node name="RECENT" parent="TabContainer" instance=ExtResource( 3 )]
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = -4.0
thumbnail_node = "res://ui/components/recent_thumbnail.tscn"
image_spacing = 7
add_refresh_button = false

[node name="STYLING" type="MarginContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="All" parent="TabContainer/STYLING" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 409.0
thumbnail_node = "res://ui/components/styling_thumbnail.tscn"
categories = ExtResource( 1 )
add_refresh_button = false
add_external_button = false

[node name="Loras" parent="TabContainer/STYLING" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 409.0
thumbnail_node = "res://ui/components/styling_thumbnail.tscn"
categories = ExtResource( 1 )

[node name="Lycoris" parent="TabContainer/STYLING" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 409.0
thumbnail_node = "res://ui/components/styling_thumbnail.tscn"
categories = ExtResource( 1 )

[node name="TextualInversion" parent="TabContainer/STYLING" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 409.0
thumbnail_node = "res://ui/components/styling_thumbnail.tscn"
categories = ExtResource( 1 )

[node name="RefreshAllTimer" type="Timer" parent="."]

[connection signal="containers_refreshed" from="." to="." method="_on_Toolbox_containers_refreshed"]
[connection signal="container_selected" from="TabContainer/STYLING/All" to="." method="_on_All_container_selected"]
[connection signal="external_path_requested" from="TabContainer/STYLING/All" to="." method="_on_TextualInversion_external_path_requested"]
[connection signal="refresh_requested" from="TabContainer/STYLING/All" to="." method="_on_TextualInversion_refresh_requested"]
[connection signal="external_path_requested" from="TabContainer/STYLING/Loras" to="." method="_on_Loras_external_path_requested"]
[connection signal="refresh_requested" from="TabContainer/STYLING/Loras" to="." method="_on_Loras_refresh_requested"]
[connection signal="external_path_requested" from="TabContainer/STYLING/Lycoris" to="." method="_on_Lycoris_external_path_requested"]
[connection signal="refresh_requested" from="TabContainer/STYLING/Lycoris" to="." method="_on_Lycoris_refresh_requested"]
[connection signal="external_path_requested" from="TabContainer/STYLING/TextualInversion" to="." method="_on_TextualInversion_external_path_requested"]
[connection signal="refresh_requested" from="TabContainer/STYLING/TextualInversion" to="." method="_on_TextualInversion_refresh_requested"]
[connection signal="timeout" from="RefreshAllTimer" to="." method="_on_RefreshAllTimer_timeout"]
